[gd_scene load_steps=20 format=2]

[ext_resource path="res://World/Spear.png" type="Texture" id=1]
[ext_resource path="res://World/SpearTrap.gd" type="Script" id=2]
[ext_resource path="res://World/SpearHitBox.gd" type="Script" id=3]
[ext_resource path="res://Music and Sounds/WHSH_Whoosh Alert Bright Small Rattle Sweep Short 02_ESM_DBT.wav" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 16, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 176, 0, 16, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=14]
radius = 4.0
height = 23.4286

[sub_resource type="CircleShape2D" id=15]
radius = 100.01

[node name="SpearTrap" type="AnimatedSprite"]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 13 )
script = ExtResource( 2 )

[node name="SpearHitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpearHitBox"]
position = Vector2( 0, 14.2857 )
shape = SubResource( 14 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Whoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -9.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 0, 14.2857 )
shape = SubResource( 15 )

[connection signal="animation_finished" from="." to="." method="_on_SpearTrap_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
